--- a/tasks.json
+++ b/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make -j",
+            "command": "cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make clean && make -j",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
